# modern_cpp_exercises

chapter_1/: CMakeLists.txt  build.sh  functions.h  sum_3_5.cpp
chapter_1/10_gray_code/: exec.cpp
chapter_1/12_largest_collatz_number/: exec.cpp
chapter_1/1_sum_3_5/: exec.cpp
chapter_1/2_greatest_commom_divisor/: CMakeLists.txt  exec.cpp
chapter_1/3_least_common_multiple/: exec.cpp
chapter_1/4_largest_prime_smaller_than_input/: exec.cpp
chapter_1/5_sexy_prime_pair/: exec.cpp
chapter_1/6_abundant_number/: exec.cpp
chapter_1/8_armstrong_number/: exec.cpp
chapter_1/9_prime_factor/: CMakeLists.txt  exec.cpp
chapter_2/: ipv4.h  test
chapter_2/1_IPV4_data_type/: exec.cpp
chapter_2/2_IPV4_enumerate/: CMakeLists.txt  exec.cpp
chapter_2/3_array_2d/: CMakeLists.txt  exec.cpp
chapter_2/4_min_any_args/: exec.c  exec.cpp
